# termfarm

./: .gitignore  .goreleaser.yaml  Cargo.toml  Package.swift  README.md  flake.nix  justfile
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
Sources/termfarm/: Crops.swift  Init.swift  InventoryCommand.swift  Market.swift  MarketCommand.swift  Models.swift  Persistence.swift  PlantCommand.swift  PlotPricing.swift  StatsCommand.swift  TermFarm.swift  termfarm.swift
Sources/termfarm/Commands/: BuyCommand.swift  BuyPlotCommand.swift  HarvestCommand.swift  InventoryCommand.swift  MarketCommand.swift  PlantCommand.swift  SellCommand.swift  StatsCommand.swift  ViewCommand.swift
src/: buy_cmd.rs  buyplot_cmd.rs  crops.rs  harvest_cmd.rs  init_cmd.rs  inventory_cmd.rs  main.rs  market.rs  market_cmd.rs  models.rs  persistence.rs  plant_cmd.rs  plot_pricing.rs  sell.rs  sell_cmd.rs  stats.rs  stats_cmd.rs  tui.rs  view_cmd.rs
