[package]
name = "termfarm"
version = "2.0.4"
edition = "2024"
description = "A terminal idle farming game"
license = "MIT"
repository = "https://github.com/indium114/termfarm"
homepage = "https://github.com/indium114/termfarm"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colorize = "0.1.0"
dirs = "6.0.0"
humantime = "2.4.0"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
usefulog = "0.1.1"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
